--- a/index.html
+++ b/index.html
@@ -5,12 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
-    <h1>
-ello
-    </h1>
+    <div class="header-container">
+        <div class="wrapper">
+            <header>
+                <div class="hero-logo">
+                    <img src="images/logo.png" alt="logo"/>
+                    <div class="photo-bg">
+                    </div>
+                </div>
+            </header>
+        </div>
+    </div>
+    <div class="intro-section">
+        <div class="section-content">
+            <div class="row">
+                <div class="col">
+                  1 of 2
+                </div>
+                <div class="col">
+                  2 of 2
+                </div>
+              </div>
+        </div>
+    </div>
    
 </body>
 </html>
