--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -16,6 +17,9 @@
                 <div class="hero-logo">
                     <img src="images/logo.png" alt="logo"/>
                     <div class="photo-bg">
+                        <!-- <img src="images/patternleft.png" width="360.6" class="pattern-left">
+                        <img src="images/patternright.png" width="354.03" class="pattern-right"> -->
+
                     </div>
                 </div>
             </header>
@@ -24,15 +28,36 @@
     <div class="intro-section">
         <div class="section-content">
             <div class="row">
-                <div class="col">
+                <div class="col info-txt">
                   1 of 2
                 </div>
-                <div class="col">
+                <div class="col survey-highlights">
                   2 of 2
                 </div>
               </div>
         </div>
     </div>
+
+    <!-- footer  -->
+    <div class="footer-container">
+        <div class="wrapper">
+            <footer>
+                <div class="footer-header">
+                    <h4>Download your copy of the full report.</h4>
+                </div>
+                <div class="footer-email">
+                        <input type="text" class="text-input" placeholder="Your Email" aria-label="Your Email">
+                        <span class="button">
+                            <h5>
+                                Get the Scoop
+                            </h5>
+                            
+                        </span>
+                </div>
+            </footer>
+        </div>
+    </div>
+ 
    
 </body>
 </html>
