made mobile friendly

--- a/index.html
+++ b/index.html
@@ -20,15 +20,12 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="header-container">
+    <div>
+        <img class="header-container" src="images/Herosectionbanner.png" alt="banner_design" width="1422"/>
       <div class="wrapper">
         <header>
           <div class="hero-logo">
-            <img src="images/logo.png" alt="logo" />
-            <div class="photo-bg">
-              <!-- <img src="images/patternleft.png" width="360.6" class="pattern-left">
-                        <img src="images/patternright.png" width="354.03" class="pattern-right"> -->
-            </div>
+            <img src="images/logo.png" alt="logo"/>
           </div>
         </header>
       </div>
