--- a/index.html
+++ b/index.html
@@ -17,15 +17,20 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Career Survery Report</title>
   </head>
   <body>
     <div>
-        <img class="header-container" src="images/Herosectionbanner.png" alt="banner_design" width="1422"/>
+      <img
+        class="header-container"
+        src="images/Herosectionbanner.png"
+        alt="banner_design"
+        width="1422"
+      />
       <div class="wrapper">
         <header>
           <div class="hero-logo">
-            <img src="images/logo.png" alt="logo"/>
+            <img src="images/logo.png" alt="logo" />
           </div>
         </header>
       </div>
@@ -58,11 +63,15 @@
         <div class="survey-highlights">
           <h4 class="survey-header">Survey Highlights</h4>
           <div class="icon-div">
-          <img class="opportunities" src="images/opportunities icon.svg" alt="opportunities_icon"/>
-          <img class="data" src="images/data icon.svg" alt="data_icon"/>          
-          <img class="hours" src="images/hours icon.svg" alt="hours_icon"/>
-          <img class="home" src="images/home icon.svg" alt="home_icon"/>
-        </div>
+            <img
+              class="opportunities"
+              src="images/opportunities icon.svg"
+              alt="opportunities_icon"
+            />
+            <img class="data" src="images/data icon.svg" alt="data_icon" />
+            <img class="hours" src="images/hours icon.svg" alt="hours_icon" />
+            <img class="home" src="images/home icon.svg" alt="home_icon" />
+          </div>
           <ul class="survey-list">
             <li>
               <h6>More Opportunity in B2B</h6>
