fixed the form element

--- a/index.html
+++ b/index.html
@@ -117,15 +117,17 @@
             </h4>
           </div>
           <div class="footer-email">
-            <input
-              type="text"
-              class="text-input"
-              placeholder="Your Email"
-              aria-label="Your Email"
-            />
-            <span class="button">
-              <h5 class="footer-button-txt">Get the Scoop</h5>
-            </span>
+            <form>
+              <input
+                type="text"
+                class="text-input"
+                placeholder="Your Email"
+                aria-label="Your Email"
+              />
+              <span class="button">
+                <input type="submit" class="footer-button-txt" value="Get The Scoop">
+              </span>
+            </form>
           </div>
         </footer>
       </div>
